tests/reference/asr-test_dict_key1-6e57a28.stderr
semantic error: unhashable type: 'list'
 --> tests/errors/test_dict_key1.py:4:38
  |
4 |     my_dict: dict[list[i32], str] = {[1, 2]: "first", [3, 4]: "second"}
  |                                      ^^^^^^ 
